--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,9 @@ version: "3"
 services:
   my-app:
     image: $DOCKER_IMAGE:$DOCKER_TAG
+    enviroment:
+      - DOCKER_IMAGE=$DOCKER_IMAGE
+      - DOCKER_TAG=$DOCKER_TAG
     ports:
       - 80:3000
   mongodb:
